k8s/yaml-files/monitor/prometheus/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-virtual-host-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.monitor.baotrung.xyz
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana-stack-k-alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
  - host: grafana.monitor.baotrung.xyz
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana-stack
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: prometheus.monitor.baotrung.xyz
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana-stack-k-prometheus
            port: 
              number: 9090
        path: /
        pathType: Prefix
