k8s/yaml-files/monitor/prometheus/minio.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: minio.monitor.baotrung.xyz
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 9001
        path: /minio
        pathType: Prefix
